# fast-xml

./: Cargo.toml  Changelog.md  README.md
.github/workflows/: rust.yml
benches/: bench.rs
compare/: Cargo.toml
compare/benches/: bench.rs
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: errors.rs  lib.rs  reader.rs  writer.rs
src/de/: map.rs  mod.rs  seq.rs
src/events/: attributes.rs  mod.rs
src/se/: mod.rs
tests/: serde-de.rs  serde-migrated.rs  serde_roundtrip.rs  test.rs  unit_tests.rs  xmlrs_reader_tests.rs
